Added support for junit platform and added tests for DebugProcessListener